src/objects/APXT_BPM__Conductor__c.object
<CustomObject>
    <fields>
        <fullName>APXT_BPM__Conductor_Environment__c</fullName>
        <description>ONLY USED BY CONGA SUPPORT

* Recommended to remove from page layout when not in use *</description>
        <label>Conductor Environment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>prod-</fullName>
                    <default>true</default>
                    <label>prod-</label>
                </value>
                <value>
                    <fullName>staging-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APXT_BPM__Consolidated_PDF_Output_File__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Combine PDFs into a single file when scheduling a consolidated Conductor routine and delivering to a Content Workspace.</inlineHelpText>
        <label>Consolidated PDF Output File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APXT_BPM__Content_Workspace_Id__c</fullName>
        <inlineHelpText>The ID of a Content Library where files from a scheduled Conductor process will be stored when the output mode is set to download.</inlineHelpText>
        <label>Content Workspace ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_BPM__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_BPM__Has_Query_Id__c</fullName>
        <formula>IF(  ISBLANK( APXT_BPM__Query_Id__c ) , 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Query ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APXT_BPM__Has_Record_Id__c</fullName>
        <formula>IF(  ISBLANK( APXT_BPM__Record_Id__c ) , 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Record ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APXT_BPM__Has_Report_Id__c</fullName>
        <formula>IF(  ISBLANK( APXT_BPM__Report_Id__c ) , 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Report ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APXT_BPM__Next_Run_Date_Display__c</fullName>
        <formula>APXT_BPM__Next_Run_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatically populated by the Conductor schedule.</inlineHelpText>
        <label>Next Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APXT_BPM__Next_Run_Date__c</fullName>
        <inlineHelpText>Determined by &quot;Schedule&quot; button.  Do not edit this field manually.</inlineHelpText>
        <label>Next Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APXT_BPM__Query_Id__c</fullName>
        <inlineHelpText>The ID of a Conga Query record that returns the list of Master Object record IDs. Optionally, the query may include other fields.</inlineHelpText>
        <label>Query ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_BPM__Record_Id__c</fullName>
        <inlineHelpText>An individual Salesforce record ID to use as a Master Object ID.</inlineHelpText>
        <label>Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_BPM__Report_Id__c</fullName>
        <inlineHelpText>The ID of a Salesforce Report that contains the list of Master Object IDs. Optionally, the report may include other columns.</inlineHelpText>
        <label>Report ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_BPM__Schedule_Description_Display__c</fullName>
        <formula>APXT_BPM__Schedule_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatically populated by the Conductor schedule.</inlineHelpText>
        <label>Schedule Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_BPM__Schedule_Description__c</fullName>
        <inlineHelpText>Determined by &quot;Schedule&quot; button.  Do not edit this field manually.</inlineHelpText>
        <label>Schedule Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APXT_BPM__Title__c</fullName>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_BPM__URL_Field_Name__c</fullName>
        <inlineHelpText>The API name of the formula field that contains the converted Conga Composer button / link URL.</inlineHelpText>
        <label>URL Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_BPM__Version__c</fullName>
        <description>Used to upgrade from prior versions of Conga Conductor.

* Recommended to remove from page layout when not in use *</description>
        <label>Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C8</fullName>
                    <default>true</default>
                    <label>C8</label>
                </value>
                <value>
                    <fullName>C7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Conga Conductor</label>
    <listViews>
        <fullName>APXT_BPM__All</fullName>
        <columns>NAME</columns>
        <columns>APXT_BPM__Title__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Conductor-{0000}</displayFormat>
        <label>Conductor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conga Conductors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>APXT_BPM__Either_Report_or_Query_Id_must_be_suppli</fullName>
        <active>false</active>
        <errorConditionFormula>AND(  ISBLANK(APXT_BPM__Report_Id__c ), ISBLANK( APXT_BPM__Query_Id__c ), ISBLANK( APXT_BPM__Record_Id__c ))</errorConditionFormula>
        <errorDisplayField>APXT_BPM__Report_Id__c</errorDisplayField>
        <errorMessage>You must supply one of the following: a Report Id, a Query Id or a Record Id.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APXT_BPM__Not_Both_a_Report_Id_and_a_Query_Id</fullName>
        <active>true</active>
        <errorConditionFormula>( APXT_BPM__Has_Query_Id__c +  APXT_BPM__Has_Record_Id__c +  APXT_BPM__Has_Report_Id__c ) &gt; 1</errorConditionFormula>
        <errorDisplayField>APXT_BPM__Report_Id__c</errorDisplayField>
        <errorMessage>You must supply *only one* of the following:  a Report Id, a Query Id or a Record Id.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APXT_BPM__Query_Id_Length</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  APXT_BPM__Query_Id__c != &quot;&quot; ,

OR( LEN(  APXT_BPM__Query_Id__c  ) &gt; 18 ,
LEFT(  APXT_BPM__Query_Id__c , 1) != &quot;a&quot; ))</errorConditionFormula>
        <errorDisplayField>APXT_BPM__Query_Id__c</errorDisplayField>
        <errorMessage>The Query Id must be a 15- or 18-character Salesforce ID from a Conga Query</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APXT_BPM__Record_Id_Length</fullName>
        <active>true</active>
        <errorConditionFormula>AND( APXT_BPM__Record_Id__c != &quot;&quot; ,

LEN( APXT_BPM__Record_Id__c ) &gt; 18)</errorConditionFormula>
        <errorDisplayField>APXT_BPM__Record_Id__c</errorDisplayField>
        <errorMessage>The Record Id must be a 15- or 18-character Salesforce ID</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APXT_BPM__Report_Id_Length</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  APXT_BPM__Report_Id__c != &quot;&quot; ,

OR( LEN(  APXT_BPM__Report_Id__c  ) &gt; 18 ,
LEFT(  APXT_BPM__Report_Id__c , 3) != &quot;00O&quot; ))</errorConditionFormula>
        <errorDisplayField>APXT_BPM__Report_Id__c</errorDisplayField>
        <errorMessage>The Report Id must be a 15- or 18-character Salesforce ID from a Report</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APXT_BPM__URL_Field_Name_Required</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK( APXT_BPM__URL_Field_Name__c )</errorConditionFormula>
        <errorDisplayField>APXT_BPM__URL_Field_Name__c</errorDisplayField>
        <errorMessage>You must supply the API Name of the field that contains the Composer URL</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APXT_BPM__Workspace_Id_Length</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  APXT_BPM__Content_Workspace_Id__c  != &quot;&quot; ,

OR( LEN( APXT_BPM__Content_Workspace_Id__c ) &gt; 18 ,
LEFT( APXT_BPM__Content_Workspace_Id__c , 3) != &quot;058&quot; ))</errorConditionFormula>
        <errorDisplayField>APXT_BPM__Content_Workspace_Id__c</errorDisplayField>
        <errorMessage>The Workspace Id must be a 15- or 18-character Salesforce ID from a Content Worksapce.</errorMessage>
    </validationRules>
</CustomObject>